# Vision

./: .gitignore  Dockerfile  README.md  cron_jobs.json  cron_tasks.json  docker-compose.yml  install.bat  install.ps1  pyproject.toml  run.py  start_vision.bat  vision.db-shm  vision.db-wal
scripts/: install.bat
skills/: ----20260701.md  ----20260703.md  merge-skill.md  test-skill.md  создай-автоматизацию-деплоя-проекта-20260629.md  создай-автоматизацию-деплоя-проекта-20260630.md  создай-автоматизацию-деплоя-проекта-20260701.md
tests/: test_core.py  test_delegate.py  test_extras.py  test_gateway.py  test_tools.py
vision/: __init__.py  cli.py
vision/agent/: __init__.py  agent.py  context.py  delegate.py  llm_client.py  skill_manager.py  subagent.py
vision/core/: __init__.py  config.py  database.py  memory.py
vision/cron/: scheduler.py
vision/gateway/: __init__.py  server.py
vision/gateway/static/: index.html
vision/rag/: __init__.py  embedder.py  loader.py  retriever.py  vector_store.py
vision/tools/: __init__.py  approval.py  bash_tool.py  browser_tools.py  cron_tools.py  delegate_tool.py  delegate_tools.py  file_tools.py  memory_tools.py  registry.py  skill_tools.py  system_tools.py
vision/ui/: __init__.py
