[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vision-agent"
version = "0.1.0"
description = "Self-improving AI agent with tool calling, RAG, and multi-platform support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Vision Team" }]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psutil>=5.9.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "edge-tts>=6.0.0",
]
gestures = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.0",
    "Pillow>=10.0.0",
]
messaging = [
    "python-telegram-bot>=20.0",
    "discord.py>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
vision = "vision.cli:main"

[tool.setuptools.packages.find]
include = ["vision", "vision.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
